@@ -1,3 +1,9 @@
+2011-09-16  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Source/cairo/CairoContext.m: Switch to XGCairoSurface by default,
+	because it fixes the corrupted display problem reported by Riccardo
+	on 16-bit displays.
+
 2011-09-12 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/cairo/CairoGState.m (-saveClip, -restoreClip:,
